--- a/docker/Dockerfile/Dockerfile_jellyfish_development
+++ b/docker/Dockerfile/Dockerfile_jellyfish_development
@@ -122,16 +122,13 @@ RUN pip3 install vcstool colcon-common-extensions
 # Source ROS2 (optional)
 # source /opt/ros/humble/setup.bash
 
-# Install Gazebo Ignition Fortress
-#? https://gazebosim.org/docs/fortress/install_ubuntu_src
-#? https://gazebosim.org/docs/fortress/ign_docker_env
-RUN apt install --quiet -y ros-humble-ros-gz
+# Install Gazebo Ignition
+# RUN sh -c 'echo "deb [arch=$(dpkg --print-architecture)] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" > /etc/apt/sources.list.d/ros2-latest.list'
+# RUN curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
+# RUN apt update
 
-# Install Gazebo11 - Ignition Fortress
-# RUN wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg
-# RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null
-# RUN apt update && apt upgrade -y
-# RUN apt install --quiet -y ignition-fortress
+RUN apt install -y ros-${ROS_DISTRO}-ros-ign
+
 
 # Clean
 RUN apt -y autoremove \
