--- a/docker/ubuntu_config.env
+++ b/docker/ubuntu_config.env
@@ -10,11 +10,11 @@ UBUNTU_GID=1000
 
 # Repo env
 REPO_AUTHOR=vince_94
-REPO_NAME=gtest_demo
+REPO_NAME=ros2_project
 TAG=0.1
 GITLAB_REGISTRY=false
 ROS_ENABLE=true
 
 # Workspace volumes
-WS_VOLUME=workspace  # run-time
+WS_VOLUME=ros2_ws  # run-time
 BUILD_STAGE=base-stage  # build-time
