--- a/docker/Dockerfile_ros
+++ b/docker/Dockerfile_ros
@@ -95,6 +95,18 @@ RUN pip3 install --upgrade \
     qpsolvers \
     quadprog gurobipy osqp cvxopt cvxpy
 
+# # install CVXOPT (https://cvxopt.org/)
+# RUN pip3 install --upgrade cvxopt
+
+# # install CVXPY (https://www.cvxpy.org/index.html)
+# RUN pip3 install --upgrade cvxpy
+
+# # install Guroby ()
+# RUN pip3 install --upgrade gurobipy
+
+# # install osqp ()
+# RUN pip3 install --upgrade osqp
+
 
 RUN pip3 install vcstool colcon-common-extensions
 
