--- a/docker/ubuntu_config.env
+++ b/docker/ubuntu_config.env
@@ -16,5 +16,5 @@ GITLAB_REGISTRY=false
 ROS_ENABLE=true
 
 # Workspace volumes
-WS_VOLUME=ros2_ws  # run-time
+WS_VOLUME=workspace  # run-time
 BUILD_STAGE=base-stage  # build-time
