--- a/docker/Dockerfile_ros
+++ b/docker/Dockerfile_ros
@@ -78,7 +78,7 @@ RUN pip3 install --upgrade \
     mypy
 
 RUN pip3 install --upgrade \
-    pytest \
+    pytest==7.1.3 \
     pytest-mock \
     pytest-cov pytest-html \
     pytest-pep8 \
@@ -126,6 +126,8 @@ RUN pip3 install vcstool colcon-common-extensions
 
 RUN apt install -y ros-${ROS_DISTRO}-ros-ign
 
+# Open html links
+RUN sudo apt install lynx
 
 
 ##############
