--- a/docker/ubuntu_config.env
+++ b/docker/ubuntu_config.env
@@ -15,6 +15,12 @@ TAG=0.1
 GITLAB_REGISTRY=false
 ROS_ENABLE=true
 
-# Workspace volumes
-WS_VOLUME=workspace  # run-time
-BUILD_STAGE=base-stage  # build-time
+# Volumes to load at runtime
+WS_PATH=$HOME/Personal
+WS_NAME=iris_quadcopter
+
+CONFIG_PATH=$PWD/config
+CONFIG_FILES=(.vscode colcon.sh)
+
+# Build stage at build-time
+BUILD_STAGE=base-stage
