--- a/docker/Dockerfile_ros
+++ b/docker/Dockerfile_ros
@@ -128,6 +128,9 @@ RUN apt install -y ros-${ROS_DISTRO}-ros-ign
 RUN apt install --quiet -y lynx
 RUN usermod -aG root $UBUNTU_USER
 
+# Install git
+RUN apt install --quiet -y bash-completion
+
 
 ##############
 # ENTRYPOINT #
@@ -137,7 +140,7 @@ RUN add-apt-repository universe
 
 # Configurations
 #TODO hardcoded
-COPY .vscode/ $HOME/workspace/.vscode/
+# COPY .vscode/ $HOME/workspace/.vscode/
 
 # Clean
 RUN apt -y autoremove \
