--- a/docker/ubuntu_config.env
+++ b/docker/ubuntu_config.env
@@ -20,9 +20,9 @@ WS_PATH=$HOME/Personal
 WS_NAME=iris_quadcopter
 
 CONFIG_PATH=$PWD/config
-VSCODE_CONFIG=.vscode/
-BUILD_FILE=colcon.sh
-# CONFIG_FILES=(.vscode colcon.sh)
+# VSCODE_CONFIG=.vscode/
+# BUILD_FILE=colcon.sh
+CONFIG_FILES=(.vscode colcon.sh)
 
 # Build stage at build-time
 BUILD_STAGE=base-stage
