--- a/docker/ubuntu_config.env
+++ b/docker/ubuntu_config.env
@@ -19,9 +19,7 @@ ROS_ENABLE=true
 WS_PATH=$HOME/Personal
 WS_NAME=iris_quadcopter
 
-CONFIG_PATH=$PWD/config
-# VSCODE_CONFIG=.vscode/
-# BUILD_FILE=colcon.sh
+CONFIG_PATH=$PWD/utils
 CONFIG_FILES=(.vscode colcon.sh)
 
 # Build stage at build-time
