--- a/docker/ubuntu_config.env
+++ b/docker/ubuntu_config.env
@@ -19,8 +19,10 @@ ROS_ENABLE=true
 WS_PATH=$HOME/Personal
 WS_NAME=iris_quadcopter
 
-CONFIG_PATH=$PWD/utils
-CONFIG_FILES=(.vscode colcon.sh)
+LIBS_PATH=$HOME/libs
+
+CONFIG_PATH=$PWD/config
+CONFIG_FILES=(.vscode/ colcon.sh)
 
 # Build stage at build-time
 BUILD_STAGE=base-stage
