--- a/config/.vscode/extensions.json
+++ b/config/.vscode/extensions.json
@@ -12,9 +12,9 @@
         "shardulm94.trailing-spaces",
         "dotjoshjohnson.xml",
         "augustocdias.tasks-shell-input",
+        "eamodio.gitlens"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
-		
 	]
 }
