Feature refactor image

--- a/docker/config.env
+++ b/docker/config.env
@@ -1,19 +1,28 @@
 #!/bin/bash
 
+# Docker base image
+BASE_IMAGE=osrf/ros:humble-desktop
+
 # Ubuntu env
-UBUNTU_RELEASE=22.04
-ROS_DISTRO=osrf/ros:humble-desktop-full
 UBUNTU_USER=user
 UBUNTU_PSW=password
 UBUNTU_UID=1000
 UBUNTU_GID=1000
 
 # Repo env
-REPO_AUTHOR=vince_94
-REPO_NAME=ros2_project
-TAG=0.2
-GITLAB_REGISTRY=false
-ROS_ENABLE=true
+REPO_AUTHOR=drone5205538
+REPO_NAME=ros2_project  #TODO
+
+ARCH=$(uname -m)
+if [ "$ARCH" == "x86_64" ]; then
+    TAG=develop
+elif [ "$ARCH" == "arm" ] || [ "$ARCH" == "aarch64" ]; then
+    TAG=deploy
+else
+    echo "ERROR: Unmatch OS architecture"
+    return 1
+fi
+
 
 # Volumes to load at runtime
 WS_PATH=$HOME/Personal
@@ -23,4 +32,4 @@ LIBS_PATH=$HOME/libs
 CONFIG_PATH=$PWD/config
 
 # Build stage at build-time
-BUILD_STAGE=base-stage
+BUILD_STAGE=px4-stage
