--- a/docker/config.env
+++ b/docker/config.env
@@ -1,7 +1,6 @@
 #!/bin/bash
 
-# Docker base image
-BASE_IMAGE=osrf/ros:humble-desktop
+PROJECT_NAME=personal_project
 
 # Ubuntu env
 UBUNTU_USER=user
@@ -9,10 +8,7 @@ UBUNTU_PSW=password
 UBUNTU_UID=1000
 UBUNTU_GID=1000
 
-# Repo env
-REPO_AUTHOR=drone5205538
-REPO_NAME=ros2_project  #TODO
-
+# OS architecture
 ARCH=$(uname -m)
 if [ "$ARCH" == "x86_64" ]; then
     TAG=develop
@@ -23,13 +19,11 @@ else
     return 1
 fi
 
-
-# Volumes to load at runtime
-WS_PATH=$HOME/Personal
-WS_NAME=iris_quadcopter
-
-LIBS_PATH=$HOME/libs
-CONFIG_PATH=$PWD/config
-
-# Build stage at build-time
-BUILD_STAGE=px4-stage
+# Project config
+if [[ -z "docker/config_${PROJECT_NAME}.env" ]]; then
+    echo "Project does not exists"
+    return
+else
+    echo "Project: ${PROJECT_NAME}"
+fi
+source docker/config_${PROJECT_NAME}.env
