--- a/docker/config.env
+++ b/docker/config.env
@@ -7,6 +7,7 @@ UBUNTU_USER=user
 UBUNTU_PSW=password
 UBUNTU_UID=1000
 UBUNTU_GID=1000
+HOSTNAME=$PROJECT_NAME
 
 # OS architecture
 ARCH=$(uname -m)
