--- a/config/.vscode/settings.json
+++ b/config/.vscode/settings.json
@@ -69,6 +69,18 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
-    }
+        "variant": "cpp",
+        "core": "cpp",
+        "*.ipp": "cpp",
+        "valarray": "cpp",
+        "ranges": "cpp",
+        "strstream": "cpp",
+        "codecvt": "cpp",
+        "cfenv": "cpp"
+    },
+    "python.testing.pytestArgs": [
+        "."
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
