--- a/docker/config.env
+++ b/docker/config.env
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-PROJECT_NAME=iris_quadcopter
+PROJECT_NAME=ros2_ws
 
 # Ubuntu env
 UBUNTU_USER=user
@@ -8,6 +8,8 @@ UBUNTU_PSW=password
 UBUNTU_UID=1000
 UBUNTU_GID=1000
 HOSTNAME=$PROJECT_NAME
+
+DOCKER_RUN_CMD=/bin/bash
 
 # OS architecture
 ARCH=$(uname -m)
@@ -27,4 +29,4 @@ if [[ -z "docker/config_${PROJECT_NAME}.env" ]]; then
 else
     echo "Project: ${PROJECT_NAME}"
 fi
-source docker/config_${PROJECT_NAME}.env
+source projects_config/${PROJECT_NAME}.env
