--- a/projects/iris_quadcopter.env
+++ b/projects/iris_quadcopter.env
@@ -3,20 +3,21 @@
 # Docker base image
 BASE_IMAGE=osrf/ros:humble-desktop
 DOCKER_FILE=Dockerfile_ros
+TAG=develop
 
 # Repo env
-REPO_AUTHOR=vince
+REPO_AUTHOR=drone5205538
 REPO_NAME=ros2_project  #TODO
 
 # Volumes to load at runtime
 WS_PATH=$HOME/Personal
-WS_NAME=ros2_ws
+WS_NAME=iris_quadcopter
 
 LIBS_PATH=$HOME/libs
 CONFIG_PATH=$PWD/config
 
 # Build stage at build-time
-BUILD_STAGE=ros-stage
+BUILD_STAGE=px4-stage
 
 
 if [ -z "$2" ]; then
