--- a/docker/config.env
+++ b/docker/config.env
@@ -2,6 +2,18 @@
 
 PROJECT_NAME=ros2_ws
 
+if [ ! -d $1 ]; then
+    PROJECT_NAME=$1
+else
+    echo "Insert project name as next argument"
+    return 1
+fi
+
+if [ ! -d $2 ]; then
+    TAG=$2
+fi
+
+
 # Ubuntu env
 UBUNTU_USER=user
 UBUNTU_PSW=password
@@ -10,23 +22,14 @@ UBUNTU_GID=1000
 HOSTNAME=$PROJECT_NAME
 
 DOCKER_RUN_CMD=/bin/bash
-
-# OS architecture
 ARCH=$(uname -m)
-if [ "$ARCH" == "x86_64" ]; then
-    TAG=develop
-elif [ "$ARCH" == "arm" ] || [ "$ARCH" == "aarch64" ]; then
-    TAG=deploy
-else
-    echo "ERROR: Unmatch OS architecture"
-    return 1
-fi
 
 # Project config
-if [[ -z "docker/config_${PROJECT_NAME}.env" ]]; then
-    echo "Project does not exists"
-    return
+ENV_PATH="${PWD}/projects/${PROJECT_NAME}/config.env"
+if [[ ! -f $ENV_PATH ]]; then
+    echo "Project does not exists: $ENV_PATH"
+    return 1
 else
     echo "Project: ${PROJECT_NAME}"
 fi
-source projects_config/${PROJECT_NAME}.env
+source $ENV_PATH
