--- a/projects/personal_project/config.env
+++ b/projects/personal_project/config.env
@@ -1,22 +1,23 @@
 #!/bin/bash
 
 # Docker base image
-BASE_IMAGE=osrf/ros:humble-desktop
-DOCKER_FILE=Dockerfile_ros
+BASE_IMAGE=ubuntu:22.04
+DOCKER_FILE=Dockerfile_ubuntu
+TAG=develop
 
 # Repo env
-REPO_AUTHOR=drone5205538
-REPO_NAME=ros2_project  #TODO
+REPO_AUTHOR=vince
+REPO_NAME=personal_project
 
 # Volumes to load at runtime
 WS_PATH=$HOME/Personal
-WS_NAME=iris_quadcopter
+WS_NAME=personal_project
 
 LIBS_PATH=$HOME/libs
 CONFIG_PATH=$PWD/config
 
 # Build stage at build-time
-BUILD_STAGE=px4-stage
+BUILD_STAGE=base-stage
 
 
 if [ -z "$2" ]; then
