--- a/projects/restapi_toy.env
+++ b/projects/restapi_toy.env
@@ -2,15 +2,16 @@
 
 # Docker base image
 BASE_IMAGE=ubuntu:22.04
-DOCKER_FILE=Dockerfile_ubuntu
+DOCKER_FILE=Dockerfile_aws
+TAG=develop
 
 # Repo env
-REPO_AUTHOR=vince
-REPO_NAME=personal_project
+REPO_AUTHOR=francescomrn
+REPO_NAME=restapi_toy
 
 # Volumes to load at runtime
-WS_PATH=$HOME/Personal
-WS_NAME=personal_project
+WS_PATH=$HOME/Personal/restapi_toy
+WS_NAME=RestAPI-Toy
 
 LIBS_PATH=$HOME/libs
 CONFIG_PATH=$PWD/config
@@ -18,7 +19,7 @@ CONFIG_PATH=$PWD/config
 # Build stage at build-time
 BUILD_STAGE=base-stage
 
-
-if [ -z "$2" ]; then
+# Override default docker run cmd from cli
+if [ -n "$2" ]; then
     DOCKER_RUN_CMD=$2
 fi
