--- a/docker/Dockerfile_ros
+++ b/docker/Dockerfile_ros
@@ -123,6 +123,47 @@ ENV RCUTILS_LOGGING_USE_STDOUT=1
 ENV RCUTILS_LOGGING_BUFFERED_STREAM=1
 # ENV RCUTILS_CONSOLE_OUTPUT_FORMAT="[{severity} {time}] [{name}]: {message} ({function_name}() at {file_name}:{line_number})"
 
+# pigpio
+USER $UBUNTU_USER
+WORKDIR /home/$UBUNTU_USER
+RUN wget https://github.com/joan2937/pigpio/archive/master.zip
+RUN unzip master.zip
+RUN cd pigpio-master && make
+USER root
+RUN cd pigpio-master && make install
+RUN rm -r master.zip
+RUN rm -r pigpio-master
+
+
+# Clean
+USER root
+RUN apt -y autoremove && apt clean autoclean \
+	&& rm -rf /var/lib/apt/lists/{apt,dpkg,cache,log} /tmp/* /var/tmp/*
+
+# Set user
+USER $UBUNTU_USER
+WORKDIR /home/$UBUNTU_USER
+
+# Set entrypoint
+COPY ./docker/ros2_entrypoint.sh /
+ENTRYPOINT ["/ros2_entrypoint.sh"]
+
+RUN echo "source /usr/share/bash-completion/completions/git" >> ~/.bashrc
+RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash" >> ~/.bashrc
+RUN echo "source /usr/share/colcon_argcomplete/hook/colcon-argcomplete.bash" >> ~/.bashrc
+
+ENV force_color_prompt=yes
+CMD ["bash"]
+
+
+#! sim-stage
+FROM ros-stage as sim-stage
+
+# Update
+RUN apt update && \
+	apt upgrade -y
+
+
 # Ignition Gazebo
 # RUN apt install -y ros-${ROS_DISTRO}-ros-ign
 
@@ -152,17 +193,6 @@ RUN wget https://github.com/foxglove/studio/releases/download/v1.75.0/foxglove-s
 RUN apt install -y ./foxglove-studio-*.deb
 RUN rm /foxglove-studio-*.deb
 RUN apt install -y ros-$ROS_DISTRO-foxglove-bridge
-
-# pigpio
-USER $UBUNTU_USER
-WORKDIR /home/$UBUNTU_USER
-RUN wget https://github.com/joan2937/pigpio/archive/master.zip
-RUN unzip master.zip
-RUN cd pigpio-master && make
-USER root
-RUN cd pigpio-master && make install
-RUN rm -r master.zip
-RUN rm -r pigpio-master
 
 
 # Clean
