--- a/docker/config.env
+++ b/docker/config.env
@@ -15,11 +15,11 @@ fi
 
 
 # Ubuntu env
-UBUNTU_USER=$HOSTNAME
+UBUNTU_USER="user"
 UBUNTU_PSW=password
 UBUNTU_UID=1000
 UBUNTU_GID=1000
-HOSTNAME=$PROJECT_NAME
+HOSTNAME=$HOSTNAME
 
 DOCKER_RUN_CMD=/bin/bash
 ARCH=$(uname -m)
