--- a/projects/ros2_ws/config.env
+++ b/projects/ros2_ws/config.env
@@ -38,7 +38,7 @@ LIBS_PATH=$HOME/libs
 CONFIG_PATH=$PWD/config
 
 # Build stage at build-time
-BUILD_STAGE=ros-stage
+BUILD_STAGE=sim-stage
 
 # Overwrite configuration
 DOCKER_RUN_CMD=/bin/bash
