--- a/projects/ros2_ws/config.env
+++ b/projects/ros2_ws/config.env
@@ -8,17 +8,21 @@ if [ -z "$TAG" ]; then
     if [ "$ARCH" == "x86_64" ]; then
         TAG=develop
         BASE_IMAGE=$x86_IMAGE
+        BUILD_STAGE=sim-stage
     elif [ "$ARCH" == "arm" ] || [ "$ARCH" == "aarch64" ]; then
         TAG=deploy
         BASE_IMAGE=$ARM_IMAGE
+        BUILD_STAGE=ros-stage
     else
         echo "ERROR: Unmatched OS architecture"
         return 1
     fi
 elif [ "$TAG" == "develop" ]; then
     BASE_IMAGE=$x86_IMAGE
+    BUILD_STAGE=sim-stage
 elif [ "$TAG" == "deploy" ]; then
     BASE_IMAGE=$ARM_IMAGE
+    BUILD_STAGE=ros-stage
 else
     echo "ERROR: Unrecognized TAG value"
     return 1
@@ -36,9 +40,6 @@ WS_NAME=ros2_ws
 
 LIBS_PATH=$HOME/libs
 CONFIG_PATH=$PWD/config
-
-# Build stage at build-time
-BUILD_STAGE=sim-stage
 
 # Overwrite configuration
 DOCKER_RUN_CMD=/bin/bash
