--- a/docker/Dockerfile_ros
+++ b/docker/Dockerfile_ros
@@ -193,8 +193,12 @@ RUN apt install -y ros-$ROS_DISTRO-plotjuggler-ros
 #   https://docs.foxglove.dev/docs/connecting-to-data/frameworks/ros2/
 RUN wget https://github.com/foxglove/studio/releases/download/v1.75.0/foxglove-studio-1.75.0-linux-amd64.deb
 RUN apt install -y ./foxglove-studio-*.deb
-RUN rm /foxglove-studio-*.deb
+# RUN rm /foxglove-studio-*.deb
 RUN apt install -y ros-$ROS_DISTRO-foxglove-bridge
+
+# QEMU
+RUN apt install -y qemu-user-static
+COPY qemu-aarch64-static /usr/bin/qemu-aarch64-static
 
 
 # Clean
