--- a/docker/Dockerfile_ros
+++ b/docker/Dockerfile_ros
@@ -48,7 +48,7 @@ RUN apt install --quiet -y \
     git curl file wget zip unzip pkg-config openssh-client openssh-server \
     xterm tmux gdb valgrind \
     htop net-tools nmap lynx \
-    libx11-dev
+    libx11-dev vim iputils-ping
 
 RUN apt install --quiet -y \
     bash-completion
